crates/kiln-core/src/snapshots/kiln_core__manifest__tests__invalid_bad_identifier.snap
---
source: crates/kiln-core/src/manifest.rs
assertion_line: 323
expression: err.to_string()
---
package name `1bad` is not a valid SystemVerilog identifier (must start with a letter or `_` and contain only letters, digits, or `_`)
