crates/kiln-core/src/snapshots/kiln_core__manifest__tests__invalid_bad_semver.snap
---
source: crates/kiln-core/src/manifest.rs
expression: err.to_string()
---
package version `not-semver` is not valid semver: unexpected character 'n' while parsing major version number
