crates/kiln-core/src/snapshots/kiln_core__manifest__tests__invalid_missing_include_dir.snap
---
source: crates/kiln-core/src/manifest.rs
expression: "ManifestError::MissingIncludeDir(std::path::PathBuf::from(\"does/not/exist\")).to_string()"
---
include directory `does/not/exist` does not exist
