crates/kiln-core/src/snapshots/kiln_core__manifest__tests__valid_full.snap
---
source: crates/kiln-core/src/manifest.rs
assertion_line: 279
expression: m
---
package:
  name: widget_v2
  version: 1.2.3
  authors:
    - Jane <jane@example.com>
  description: A widget
  license: MIT OR Apache-2.0
design:
  top: widget_top
  sources:
    - rtl/**/*.sv
  include_dirs:
    - rtl/include
  defines:
    BAR: ""
    FOO: "1"
  slang_args: []
dependencies: {}
lint: {}
wave:
  format: fst
  enabled_by_default: false
