crates/kiln-core/src/snapshots/kiln_core__manifest__tests__valid_minimal.snap
---
source: crates/kiln-core/src/manifest.rs
assertion_line: 706
expression: m
---
package:
  name: demo
  version: 0.1.0
  authors: []
  description: ~
  license: ~
design:
  top: demo_top
  sources:
    - src/**/*.sv
    - src/**/*.svh
    - src/**/*.v
  timescale: ~
  language: ~
  include_dirs: []
  defines: {}
  libraries: []
  test_sources: []
dependencies: {}
lint:
  slang: {}
  verilator: {}
tool:
  slang: ~
  verilator: ~
  verible: ~
profile: {}
wave:
  format: fst
  enabled_by_default: false
test:
  working_dir: ~
  detect: ~
  timeout: ~
  cases: []
  matrix: []
