crates/kiln-core/src/snapshots/kiln_core__manifest__tests__valid_underscore_name.snap
---
source: crates/kiln-core/src/manifest.rs
expression: m
---
package:
  name: _internal
  version: 0.0.1
  authors: []
  description: ~
  license: ~
design:
  top: t
  sources:
    - src/**/*.sv
    - src/**/*.svh
    - src/**/*.v
  include_dirs: []
  defines: {}
dependencies: {}
lint: {}
wave:
  format: fst
  enabled_by_default: false
